Add link to docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "gl_generator_profiling_struct"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
 license = "MIT OR Apache-2.0"
 description = "ProfilingStructGenerator for gl_generator"
 repository = "https://github.com/Nercury/gl_generator_profiling_struct-rs"
 keywords = ["open_gl", "gl", "profiling", "debug"]
 categories = ["api-bindings", "rendering::graphics-api"]
+documentation = "https://docs.rs/gl_generator_profiling_struct"
 
 [dependencies]
 gl_generator = { version = "0.9", features = ["unstable_generator_utils"] }
