--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ repository = "https://github.com/Nercury/gl_generator_profiling_struct-rs"
 keywords = ["open_gl", "gl", "profiling", "debug"]
 categories = ["api-bindings", "rendering::graphics-api"]
 documentation = "https://docs.rs/gl_generator_profiling_struct"
+edition = "2018"
 
 [dependencies]
-gl_generator = { version = "0.9", features = ["unstable_generator_utils"] }
+gl_generator = { version = "0.14.0", features = ["unstable_generator_utils"] }
 
